--- a/web-app/src/components/Body/styles.scss
+++ b/web-app/src/components/Body/styles.scss
@@ -2,12 +2,12 @@
 
 main {
   max-width: 900px;
-  max-height: 100vh;
-  margin: 120px auto 0;
-  padding: 0 12px;
+  padding-top: 120px;
+  margin: 0 auto;
+  min-height: 100vh;
 
   @media screen and (max-width: 576px) {
-    margin: 96px auto 0;
+    padding-top: 96px;
   }
 }
 
